--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "firebase/php-jwt": "^5.0",
+        "flipbox/lumen-generator": "^5.6",
         "laravel/lumen-framework": "5.6.*",
         "maatwebsite/excel": "^3.0",
         "vlucas/phpdotenv": "~2.2"
