--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2",
         "firebase/php-jwt": "^5.0",
-        "flipbox/lumen-generator": "^5.6",
-        "laravel/lumen-framework": "5.6.*",
+        "flipbox/lumen-generator": "6.0",
+        "fruitcake/laravel-cors": "^1.0",
+        "laravel/lumen-framework": "^6.0",
         "maatwebsite/excel": "^3.0",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
