--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-CACHE_DRIVER=file
-QUEUE_DRIVER=sync
+CACHE_DRIVER=array
+QUEUE_DRIVER=database
+
+JWT_SECRET=
